--- a/RoomPlanner/RoomPlanner/MainWindow.xaml
+++ b/RoomPlanner/RoomPlanner/MainWindow.xaml
@@ -5,9 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RoomPlanner"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="293.646,215.152,0,0" VerticalAlignment="Top" Width="75"/>
-
+        Title="MainWindow" Height="720" Width="1280">
+    <Grid Background="#FF3F3F46">
+        <Grid x:Name="SettingsPanel" VerticalAlignment="Top" Height="50" Background="#FF333337"/>
     </Grid>
 </Window>
