--- a/RoomPlanner/RoomPlanner/MainWindow.xaml
+++ b/RoomPlanner/RoomPlanner/MainWindow.xaml
@@ -9,8 +9,22 @@
     <Grid Background="#FF3F3F46">
         <Grid x:Name="SettingsPanel" VerticalAlignment="Top" Height="50" Background="#FF333337"/>
         <SelectiveScrollingGrid HorizontalAlignment="Left" Margin="0,50,0,0" Width="400">
-                <TextBlock HorizontalAlignment="Left" Height="36" TextWrapping="Wrap" Text="Стена" VerticalAlignment="Top" Width="123" FontSize="18"/>
-                <TextBlock HorizontalAlignment="Left" Height="36" TextWrapping="Wrap" Text="Дверь" VerticalAlignment="Top" Width="111" Margin="123,0,0,0" FontSize="18"/>
-            </SelectiveScrollingGrid>
-        </Grid>
+            <SelectiveScrollingGrid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </SelectiveScrollingGrid.RowDefinitions>
+            <SelectiveScrollingGrid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </SelectiveScrollingGrid.ColumnDefinitions>
+            <TextBlock HorizontalAlignment="Left" Height="43.875" TextWrapping="Wrap" Text="Стена" VerticalAlignment="Top" Width="200" FontSize="18"/>
+            <TextBlock HorizontalAlignment="Left" Height="79.875" TextWrapping="Wrap" Text="Дверь" VerticalAlignment="Top" Width="200" FontSize="18" Grid.Column="1"/>
+        </SelectiveScrollingGrid>
+    </Grid>
 </Window>
