--- a/RoomPlanner/RoomPlanner/MainWindow.xaml
+++ b/RoomPlanner/RoomPlanner/MainWindow.xaml
@@ -10,21 +10,22 @@
         <Grid x:Name="SettingsPanel" VerticalAlignment="Top" Height="50" Background="#FF333337"/>
         <SelectiveScrollingGrid HorizontalAlignment="Left" Margin="0,50,0,0" Width="400">
             <SelectiveScrollingGrid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="30*"/>
+                <RowDefinition Height="111*"/>
+                <RowDefinition Height="99*"/>
+                <RowDefinition Height="80*"/>
+                <RowDefinition Height="80*"/>
+                <RowDefinition Height="80*"/>
+                <RowDefinition Height="80*"/>
+                <RowDefinition Height="80*"/>
             </SelectiveScrollingGrid.RowDefinitions>
             <SelectiveScrollingGrid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </SelectiveScrollingGrid.ColumnDefinitions>
-            <TextBlock HorizontalAlignment="Left" Height="43.875" TextWrapping="Wrap" Text="Стена" VerticalAlignment="Top" Width="200" FontSize="18"/>
-            <TextBlock HorizontalAlignment="Left" Height="79.875" TextWrapping="Wrap" Text="Дверь" VerticalAlignment="Top" Width="200" FontSize="18" Grid.Column="1"/>
+            <TextBlock HorizontalAlignment="Left" Height="29.953" TextWrapping="Wrap" Text="Стена" VerticalAlignment="Top" Width="200" FontSize="24" TextAlignment="Center"/>
+            <TextBlock HorizontalAlignment="Left" Height="29.953" TextWrapping="Wrap" Text="Дверь" VerticalAlignment="Top" Width="200" FontSize="24" Grid.Column="1" TextAlignment="Center"/>
+            <TextBlock Grid.ColumnSpan="2" Height="53.75" Grid.Row="2" TextWrapping="Wrap" Text="Мебель" VerticalAlignment="Top" Width="400" FontSize="24" HorizontalAlignment="Left" TextAlignment="Center"/>
         </SelectiveScrollingGrid>
     </Grid>
 </Window>
