--- a/RoomPlanner/RoomPlanner/MainWindow.xaml
+++ b/RoomPlanner/RoomPlanner/MainWindow.xaml
@@ -25,6 +25,8 @@
             </SelectiveScrollingGrid.RowDefinitions>
             <Button x:Name="CreateRoomButton" Content="Помещение" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Click="CreateRoomButton_Click" Grid.Row="1"/>
             <Label Content="Ресурсы" FontFamily="Segoe UI Semibold" Padding="5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FF272727" Foreground="White"/>
+            <Button x:Name="CreateRoomButton_Copy" Content="Шкаф" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="2" Margin="0,0,100.333,0" Click="CreateRoomButton_Copy_Click"/>
+            <Button x:Name="CreateRoomButton_Copy1" Content="Дверь" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="2" Margin="99.667,0,0,0" Click="CreateRoomButton_Copy1_Click"/>
         </SelectiveScrollingGrid>
         <SelectiveScrollingGrid x:Name="PropertyList" HorizontalAlignment="Right" Margin="1030,30,0,0" Width="200" Background="#FFF0F0F0" Visibility="Hidden">
             <SelectiveScrollingGrid.RowDefinitions>
