--- a/RoomPlanner/RoomPlanner/MainWindow.xaml
+++ b/RoomPlanner/RoomPlanner/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RoomPlanner"
         mc:Ignorable="d"
-        Title="RoomPlanner" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="CanMinimize" KeyUp="Window_KeyUp">
+        Title="RoomPlanner" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="CanMinimize" KeyUp="Window_KeyUp" MouseWheel="Window_MouseWheel">
     <Grid x:Name="Grid" Background="#FFD7D7D7" Width="1280" Height="720">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="11*"/>
             <ColumnDefinition Width="69*"/>
         </Grid.ColumnDefinitions>
-        <Canvas x:Name="WorkTable" Margin="24,30,200,0" Grid.Column="1"/>
+        <Canvas x:Name="WorkTable" Margin="24,30,200,0" Grid.Column="1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center" Width="1760" Height="1380"/>
         <Grid x:Name="SettingsPanel" VerticalAlignment="Top" Height="30" Background="#FF323232" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -45,14 +45,15 @@
             <Button x:Name="CreateСasementButton" Content="Окно" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="5" Click="Button_Click"/>
             <Button x:Name="CreateSofaButton" Content="Диван/Кресло" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="6" Click="Button_Click"/>
             <Button x:Name="CreateBathButton" Content="Ванна" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="7" Click="Button_Click"/>
-            <Button x:Name="CreateDeskButton" Content="Стол?" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="8" Click="Button_Click"/>
+            <Button x:Name="CreateDeskButton" Content="Стол" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="8" Click="Button_Click"/>
             <Button x:Name="CreateSinkButton" Content="Раковина" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="9" Click="Button_Click"/>
             <Button x:Name="CreateTvButton" Content="Зеркало/Телевизор" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Grid.Row="10" Click="Button_Click"/>
         </SelectiveScrollingGrid>
-        <SelectiveScrollingGrid x:Name="PropertyList" HorizontalAlignment="Right" Margin="0,30,0,0" Width="200" Background="#FFF0F0F0" Grid.Column="1" Visibility="Hidden">
+        <SelectiveScrollingGrid x:Name="PropertyList" HorizontalAlignment="Right" Margin="0,30,0,0" Width="200" Background="#FFF0F0F0" Grid.Column="1">
             <SelectiveScrollingGrid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="2*"/>
             </SelectiveScrollingGrid.ColumnDefinitions>
             <SelectiveScrollingGrid.RowDefinitions>
                 <RowDefinition Height="20"/>
@@ -67,14 +68,17 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </SelectiveScrollingGrid.RowDefinitions>
-            <Label Content="Свойства" FontFamily="Segoe UI Semibold" Padding="5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FF272727" Foreground="White" Grid.ColumnSpan="2"/>
-            <Button x:Name="CompleteButton" Content="Готово" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Click="CompleteButton_Click" Grid.Row="10" Margin="10" Grid.ColumnSpan="2"/>
+            <Label Content="Свойства" FontFamily="Segoe UI Semibold" Padding="5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="#FF272727" Foreground="White" Grid.ColumnSpan="3"/>
+            <Button x:Name="CompleteButton" Content="Готово" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF323232" Foreground="White" Click="CompleteButton_Click" Grid.Row="10" Margin="10" Grid.ColumnSpan="3"/>
             <Label Content="Длина" Grid.Row="1" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="10,5,5,5"/>
-            <TextBox x:Name="ObjHeight" Grid.Row="1" TextWrapping="Wrap" VerticalContentAlignment="Center" Margin="10,0" VerticalAlignment="Center" Grid.Column="1"/>
+            <TextBox x:Name="ObjHeight" Grid.Row="1" TextWrapping="Wrap" VerticalContentAlignment="Center" Margin="10,0,2,0" VerticalAlignment="Center" Grid.Column="1"/>
             <Label Content="Ширина" Grid.Row="2" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="10,5,5,5"/>
-            <TextBox x:Name="ObjWidth" Grid.Row="2" TextWrapping="Wrap" VerticalContentAlignment="Center" Margin="10,0" VerticalAlignment="Center" Grid.Column="1"/>
+            <TextBox x:Name="ObjWidth" Grid.Row="2" TextWrapping="Wrap" VerticalContentAlignment="Center" Margin="10,0,2,0" VerticalAlignment="Center" Grid.Column="1"/>
             <Label Content="Угол" Grid.Row="3" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="10,5,5,5"/>
-            <TextBox x:Name="ObjAngle" Grid.Row="3" TextWrapping="Wrap" VerticalContentAlignment="Center" Grid.Column="1" Margin="10,0" VerticalAlignment="Center"/>
+            <TextBox x:Name="ObjAngle" Grid.Row="3" TextWrapping="Wrap" VerticalContentAlignment="Center" Grid.Column="1" Margin="10,0,2,0" VerticalAlignment="Center"/>
+            <Label Content="см." Grid.Row="1" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="0,5" Grid.ColumnSpan="2" Grid.Column="3"/>
+            <Label Content="см." Grid.Row="2" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="0,5" Grid.Column="2"/>
+            <Label Content="°" Grid.Row="3" VerticalContentAlignment="Center" FontSize="18" FontFamily="Segoe UI Semibold" Padding="0,5" Grid.Column="2"/>
         </SelectiveScrollingGrid>
     </Grid>
 </Window>
